load more alignment issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -494,7 +494,7 @@ ol {
 	font-size: 20px;
 	display: inline-block;
 	background: #e53637;
-	padding: 11px 5px 16px 8px;
+	padding: 12px 5px 15px 8px;
 	color: #ffffff;
 	border-radius: 0 4px 4px 0;
 }
